@@ -10,8 +10,10 @@ import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.stream.Collectors;
 
+import io.quarkus.hibernate.orm.panache.PanacheRepository;
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
+import jakarta.transaction.Transactional;
 import jakarta.ws.rs.NotFoundException;
 
 /**
@@ -20,83 +22,88 @@ import jakarta.ws.rs.NotFoundException;
 @ApplicationScoped
 public class MaintenanceTaskInMemoryRepository implements MaintenanceTasks {
 
-    private final Map<Long, MaintenanceTaskEntity> storage = new ConcurrentHashMap<>();
-    private final AtomicLong idCounter = new AtomicLong(1L);
+    private final MaintenanceTaskPanacheRepository repo;
     private final MaintenanceTaskMapper mapper;
 
+
     @Inject
-    public MaintenanceTaskInMemoryRepository(MaintenanceTaskMapper mapper) {
+    public MaintenanceTaskInMemoryRepository(MaintenanceTaskPanacheRepository repo,MaintenanceTaskMapper mapper) {
+        this.repo=repo;
         this.mapper = mapper;
     }
 
+    @Transactional
     @Override
     public MaintenanceTask create(MaintenanceTask task) {
         MaintenanceTaskEntity entity = mapper.toEntity(task);
-        entity.setId(idCounter.getAndIncrement());
 
-        storage.put(entity.getId(), entity);
 
+        entity.setId(null);
+
+        if (entity.getCreatedAt() == null) entity.setCreatedAt(LocalDateTime.now());
+        entity.setUpdatedAt(LocalDateTime.now());
+
+        repo.persist(entity);
         return mapper.toDomain(entity);
     }
 
     @Override
     public MaintenanceTask findById(String taskId) {
-        Long id = Long.parseLong(taskId);
-        MaintenanceTaskEntity entity = storage.get(id);
-
-        if (entity == null) {
-            throw new NotFoundException("Task not found: " + taskId);
-        }
+        Long id = parseId(taskId);
+        MaintenanceTaskEntity entity = repo.findByIdOptional(id)
+                .orElseThrow(() -> new NotFoundException("Task not found: " + taskId));
 
         return mapper.toDomain(entity);
     }
 
+    @Transactional
     @Override
     public MaintenanceTask updateStatus(String taskId, TaskStatus newStatus) {
-        Long id = Long.parseLong(taskId);
-        MaintenanceTaskEntity entity = storage.get(id);
+        Long id = parseId(taskId);
+        MaintenanceTaskEntity entity = repo.findByIdOptional(id)
+                .orElseThrow(() -> new NotFoundException("Task not found: "  +  taskId));
 
-        if (entity == null) {
-            throw new NotFoundException("Task not found: " + taskId);
-        }
 
         entity.setStatus(newStatus);
         entity.setUpdatedAt(LocalDateTime.now());
 
-        storage.put(id, entity);
+
         return mapper.toDomain(entity);
     }
-
+    @Transactional
     @Override
     public MaintenanceTask upsertNotes(String taskId, String notes) {
-        Long id = Long.parseLong(taskId);
-        MaintenanceTaskEntity entity = storage.get(id);
+        Long id = parseId(taskId);
+        MaintenanceTaskEntity entity = repo.findByIdOptional(id)
+                .orElseThrow(() -> new NotFoundException("Task not found: " + taskId));
 
-        if (entity == null) {
-            throw new NotFoundException("Task not found: " + taskId);
-        }
 
         entity.setNotes(notes);
         entity.setUpdatedAt(LocalDateTime.now());
-
-        storage.put(id, entity);
 
         return mapper.toDomain(entity);
     }
 
     @Override
     public List<MaintenanceTask> findAll() {
-        return storage.values().stream()
+        return repo.listAll().stream()
                 .map(mapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<MaintenanceTask> findByVin(String vin) {
-        return storage.values().stream()
-                .filter(entity -> vin.equals(entity.getVin()))
+        return repo.find("vin" , vin).list().stream()
                 .map(mapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    private static Long parseId(String taskId){
+        try{
+            return Long.parseLong(taskId);
+        }catch(NumberFormatException e){
+            throw new NotFoundException("Task not found: " + taskId);
+        }
     }
 
 }
